2005-01-23  Karl Berry  <karl@gnu.org>

	* util/texi2dvi (findprog): split $PATH at $path_sep, not spaces.
	(path_sep): don't let ComSpec fool us under cygwin.
	Report from: Eric Blake <ebb9@byu.net>, 19 Jan 2005 05:36:26 -0700.

	* doc/texinfo.txi (euro): mention the font we use for the Euro
	symbol and where to get it.  help-texinfo report from:
	christoph.sobotka@utanet.at, 19 Jan 2005 21:29:20 +0100.

	* doc/info-stnd.texi (Top): per rms, don't use @insertcopying here.
	* doc/texinfo.txi (Top): Likewise.  Also, remove recommendations
		to use it.	   

2005-01-20  Akim Demaille  <akim@epita.fr>

	* util/texi2dvi: Have a consistent function declaration style.
	(verbose, absolute_filenames): New functions.
	Use them.
	Report TEXINPUTS and INDEXSTYLE when verbose.

2005-01-20  Karl Berry  <karl@gnu.org>

	* doc/texinfo.5, doc/info.5: define and use .EX/.EE instead of
		.RS/RE, to placate esr.

	* util/texi2dvi (findprog): make sure test -x isn't returning true
	for a directory.  From Stepan and others, 20 Jan 2005 12:35:08 +0100.

2005-01-16  Torsten Bronger <bronger@physik.rwth-aachen.de>

	* makeinfo/insertion.c (handle_verbatim_environment): do HTML
		conversions, to make ]]> work.
	* makeinfo/xml.c (xml_add_char): also escape >.

2005-01-16  Torsten Bronger <bronger@physik.rwth-aachen.de>

	* makeinfo/cmds.c (cm_tie): use &nbsp; for HTML, &#xa0; for
		XML/Docbook.

2005-01-15  Karl Berry  <karl@gnu.org>

	* makeinfo/xref.c (cm_xref): output *note for @ref, instead of
		*Note.  @ref is always used in the middle of a sentence.
	* doc/texinfo.txi (pxref): rewrite, since now it can be used at
	the ends of sentences.
	(ref): likewise rewrite.

2005-01-11  Karl Berry  <karl@gnu.org>

	* util/gendocs.sh: eval $cmd instead of just $cmd, so allow for
		embedded quotes.
	From: Sergey Poznyakoff <gray@Mirddin.farlep.net>,
	11 Jan 2005 16:16:32 +0200.

2004-12-31  Karl Berry  <karl@gnu.org>

	* Version 4.8.

2004-12-21  Karl Berry  <karl@gnu.org>
